--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,12 @@
   --text-font: "Manrope", sans-serif;
   --title-font: "Dancing Script", serif;
   --script-font: "Great Vibes", cursive;
+
+  --color-1: 0 100% 63%;
+  --color-2: 270 100% 63%;
+  --color-3: 210 100% 63%;
+  --color-4: 195 100% 63%;
+  --color-5: 90 100% 63%;
 }
 
 body {
