--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,20 @@ body {
     text-wrap: balance;
   }
 }
+
+.overlay-anim {
+  position: relative;
+}
+
+.overlay-anim::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 0;
+  opacity: 1;
+  z-index: 2;
+  pointer-events: none;
+  transition: all 400ms linear;
+}
