--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,3 +44,70 @@ body {
   pointer-events: none;
   transition: all 400ms linear;
 }
+
+.flap {
+  border-left: var(--border-width) solid transparent;
+  border-right: var(--border-width) solid transparent;
+  border-bottom: 320px solid transparent;
+  /* a little smaller */
+  border-top: 360px solid #fef3c7;
+  /* a little larger */
+  transform-origin: top;
+  pointer-events: none;
+}
+
+.pocket {
+  border-left: var(--border-width) solid #fff7ed;
+  border-right: var(--border-width) solid #fff7ed;
+  border-bottom: 340px solid #ffedd5;
+  border-top: 340px solid transparent;
+}
+
+.letter {
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+  top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.open .flap {
+  transform: rotateX(180deg);
+  transition:
+    transform 0.4s ease,
+    z-index 0.6s;
+  z-index: 1;
+}
+.open .pocket {
+  border-color: transparent;
+}
+
+.close .flap {
+  transform: rotateX(0deg);
+  transition:
+    transform 0.4s 0.6s ease,
+    z-index 1s;
+  z-index: 5;
+}
+
+.close .letter {
+  transform: translateY(0px);
+  transition:
+    transform 0.4s ease,
+    z-index 1s;
+  z-index: 1;
+}
+
+.open .letter {
+  transform: translateY(-40px);
+  transition:
+    transform 0.4s 0.6s ease,
+    z-index 0.6s;
+  z-index: 10;
+  background-color: transparent;
+  overflow: visible;
+}
